@@ -1,8 +1,11 @@
-2010-08-04 j.m.reneau <renejm@users.sourceforge.net> 0.9.6z
+2010-08-05 j.m.reneau <renejm@users.sourceforge.net> 0.9.6z
 	* Rewrote the error messaging process to allow for error trapping and reporting logic in BASIC code
 	* added ONERROR label to jump to a subroutine to handle errors
 	* added LASTERROR, LASTERRORMESSAGE, LASTERRORLINE, and LASTERROREXTRA functions that describe last runtime error
 	* added OFFERROR statement to restore default error handling - fail on error
+	* changed parser to allow labels at the begining of any line or on a line by themselves
+	* added display of column number of cursor in status bar when editing
+	* added _ as a valid character in a veriable or label name (first letter MUST still be a letter)
 
 2010-08-02 j.m.reneau <renejm@users.sourceforge.net> 0.9.6y
 	* Added sqLite database processing - dbopen, dbclose, dbsetopen, dbsetclose, and dbexecute statements.
